welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:22: error: ':' expected but ')' found.
def rempliTableau(T):Array={
                   ^Array1:36: error: identifier expected but '}' found.
}
^